[FIX] z-index of new connections, connection is now above other pages

--- a/src/app/components/draggable-arrow/draggable-arrow.component.scss
+++ b/src/app/components/draggable-arrow/draggable-arrow.component.scss
@@ -2,12 +2,11 @@
 
 line {
   stroke: $connection-color;
-  stroke-width: 3px;
+  stroke-width: 1px;
 }
 
 svg {
   top: 1000px;
   left: -1000px;
-  z-index: -1;
   position: relative;
 }
