--- a/src/app/components/main-view/main-view.component.scss
+++ b/src/app/components/main-view/main-view.component.scss
@@ -9,7 +9,7 @@
     position: absolute;
     width: 80px;
     height: 60px;
-    z-index: 1;
+    z-index: 0;
   }
 
   .connection-drag-starter {
@@ -35,7 +35,8 @@
 
   .new-connection {
     position: absolute;
-    bottom: 22px;
-    left: 80px;
+    bottom: 23px;
+    left: 81px;
+    z-index: 3;
   }
 }
